--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install pytest
       run: |
         pip install -r requirements.txt
-        pip install -r requirements.devtxt
+        pip install -r requirements.dev.txt
 
     - name: Test with pytest
       run: |
