--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,10 @@ jobs:
       run: |
         pip install -r requirements.txt
         pip install -r requirements.dev.txt
+        
+    - name: Install package
+      run: python -m pip install -e .
+
 
     - name: Test with pytest
       run: |
