--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade build
+        pip install twine
         
     - name: Build and publish
       env:
