add dependencies to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 
 [metadata]
 name = mask-in-situ
-version = 0.1.0
+version = 0.1.1
 author = James Scott-Brown
 author_email = james@jamesscottbrown.com
 description = A simple tool for encrypting (only) the secrets inside text files
@@ -22,6 +22,9 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires =
+    click
+    cryptography
 
 [options.entry_points]
 console_scripts =
